--- a/mailing/templates/mailing/recipient_confirm_delete.html
+++ b/mailing/templates/mailing/recipient_confirm_delete.html
@@ -6,6 +6,6 @@
 <form method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Удалить</button>
-    <a href="{% url 'mailing:recipient_list' %}" class="btn btn-secondary">Отмена</a>
+    <a href="{% url 'mailing:recipient' recipient.pk %}" class="btn btn-secondary">Отмена</a>
 </form>
 {% endblock %}
