--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -14,6 +14,7 @@
             {{ form.as_p }}
             <button type="submit" class="btn btn-primary">Войти</button>
         </form>
+        <a class="btn btn-primary" href="{% url 'users:password_reset' %}" role="button">Восстановить пароль</a>
     </div>
     <div class="col-3">
     </div>
