--- a/users/templates/users/password_reset_form.html
+++ b/users/templates/users/password_reset_form.html
@@ -11,8 +11,8 @@
             {% csrf_token %}
             {{ form.non_field_errors }}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Сброс пароля</button>
-            <a class="btn btn-primary" href="{% url 'users:login' %}" role="button">Перейти ко входу</a>
+            <button type="submit" class="btn btn-primary">Восстановить</button>
+            <a class="btn btn-primary" href="{% url 'users:login' %}" role="button">Отмена</a>
         </form>
     </div>
     <div class="col-3">
