--- a/mailing/templates/mailing/mailing_detail.html
+++ b/mailing/templates/mailing/mailing_detail.html
@@ -12,6 +12,7 @@
                 <div class="btn-group">
                   <a class="btn btn-secondary" href="{% url 'mailing:mailing_list' %}" role="button">Назад</a>
                   <a class="btn btn-primary" href="{% url 'mailing:mailing_update' mailing.pk %}" role="button">Редактировать</a>
+                  <a class="btn btn-primary" href="{% url 'mailing:mailing_send' mailing.pk %}" role="button">Запустить рассылку</a>
                   <a class="btn btn-danger" href="{% url 'mailing:mailing_delete' mailing.pk %}" role="button">Удалить</a>
                 </div>
               </div>
