--- a/mailing/templates/mailing/mailing_detail.html
+++ b/mailing/templates/mailing/mailing_detail.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-1">
         <div class="col">
           <div class="card shadow-sm">
             <div class="card-body">
@@ -11,8 +11,9 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a class="btn btn-secondary" href="{% url 'mailing:mailing_list' %}" role="button">Назад</a>
-                  <a class="btn btn-primary" href="{% url 'mailing:mailing_update' mailing.pk %}" role="button">Редактировать</a>
-                  <a class="btn btn-primary" href="{% url 'mailing:mailing_send' mailing.pk %}" role="button">Запустить рассылку</a>
+                  <a class="btn btn-warning" href="{% url 'mailing:mailing_update' mailing.pk %}" role="button">Редактировать</a>
+                  <a class="btn btn-success" href="{% url 'mailing:mailing_send' mailing.pk %}" role="button">Запустить рассылку</a>
+                  <a class="btn btn-primary" href="{% url 'mailing:mailing_report' mailing.pk %}" role="button">Посмотреть отчёт</a>
                   <a class="btn btn-danger" href="{% url 'mailing:mailing_delete' mailing.pk %}" role="button">Удалить</a>
                 </div>
               </div>
