create home page

--- a/mailing/templates/mailing/mailing_confirm_delete.html
+++ b/mailing/templates/mailing/mailing_confirm_delete.html
@@ -2,7 +2,7 @@
 {% block title %}Удаление рассылки{% endblock %}
 {% block content %}
 <h2>Удалить рассылку</h2>
-<p>Вы уверены, что хотите удалить рассылку от {{ object.first_sending | date:"d m Y" }}?</p>
+<p>Вы уверены, что хотите удалить рассылку "{{ object.message.topic }}"?</p>
 <form method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Удалить</button>
