--- a/mailing/templates/mailing/includes/inc_menu.html
+++ b/mailing/templates/mailing/includes/inc_menu.html
@@ -8,8 +8,11 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4>Навигация</h4>
           <ul class="list-unstyled">
-            <li><a href="{% url 'mailing:recipient_list' %}" class="text-white">Главная</a></li>
+            <li><a href="{% url 'mailing:home' %}" class="text-white">Главная</a></li>
             {% if user.is_authenticated %}
+            <li><a href="{% url 'mailing:mailing_list' %}" class="text-white">Рассылки</a></li>
+            <li><a href="{% url 'mailing:message_list' %}" class="text-white">Сообщения</a></li>
+            <li><a href="{% url 'mailing:recipient_list' %}" class="text-white">Получатели</a></li>
             <li><a href="{% url 'users:logout' %}" class="text-white">Выход</a></li>
             {% else %}
             <li><a href="{% url 'users:login' %}" class="text-white">Вход</a></li>
